Added allocation service. closes #6